--- a/days17/views/contac.hbs
+++ b/days17/views/contac.hbs
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Contact</title>
+    <link rel="icon" href="https://w7.pngwing.com/pngs/16/42/png-transparent-icon-cool-miscellaneous-emoticon-apple-icon-image-format.png" type="image/x-icon" />
     
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
     <!-- //CSS LINK// -->
