--- a/days18/views/register.hbs
+++ b/days18/views/register.hbs
@@ -13,6 +13,7 @@
     integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
   <!-- font awesome -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css">
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 </head>
 
 <body style="background-color: rgb(12, 12, 12);">
@@ -48,16 +49,20 @@
 
   <!-- Start form -->
   <div class="container rounded shadow p-2 mt-5 text-white" style="width: 500px; background-color:rgb(20, 24, 32) ;">
-    {{#if messages.danger}}
-    <div class="alert alert-danger" role="alert">
-      {{messages.danger}}
-    </div>
+   {{#if messages.danger}}
+   <script>
+    Swal.fire({
+  title: '{{messages.danger.[1]}}',
+  text: '{{messages.danger.[2]}}',
+  icon: 'error',
+})
+   </script>
     {{/if}}
 
-    {{#if messages.valid}}
-    <div class="alert alert-success" role="alert">
-      {{messages.valid}}
-    </div>
+   {{#if messages.valid}}
+   <script>
+Swal.fire("messages.valid.[1]");
+   </script>
     {{/if}}
 
     <form action="/register" method="post">
@@ -80,6 +85,7 @@
   <!-- End form -->
 
   <!-- script link-->
+
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
     crossorigin="anonymous"></script>
