--- a/days18/assets/css/card.css
+++ b/days18/assets/css/card.css
@@ -19,10 +19,10 @@
     }
   
 
-    /* #navbarTogglerDemo02 ul li a:hover{
+    #navbarTogglerDemo02 ul li a:hover{
         background-color: rgb(255, 174, 0);
         border-radius: 10px;
-    } */
+    }
 
     section{
         margin-top: 40px;
