--- a/days18/views/login.hbs
+++ b/days18/views/login.hbs
@@ -12,6 +12,7 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css">
+  <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 </head>
 
 <body style="background-color: rgb(11, 11, 11);">
@@ -49,18 +50,15 @@
 
   <!-- start form -->
   <div class="container rounded shadow mt-5 text-white" style="width: 500px; background-color:rgb(20, 24, 32) ;">
-    {{#if messages.danger}}
-    <div class="alert alert-warning alert-dismissible fade show " role="alert">
-      <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
-      {{messages.danger}}
-
-    </div>
-    {{/if}}
-    {{#if messages.valid}}
-    <div class="alert alert-success alert-dismissible fade show" role="alert">
-      <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
-      {{messages.valid}}
-    </div>
+   {{#if messages.danger}}
+   <script>
+    Swal.fire({
+  icon: "error",
+  title: "Oops...",
+  text: "{{messages.danger.[2]}}",
+  footer: '<a href="/register">ingin membuat akun?</a>'
+});
+   </script>
     {{/if}}
     <form action="/login" method="post" class="p-3">
       <H1 class="text-center fs-2 pb-5">LOGIN TO YOUR ACCOUNT</H1>
