--- a/days18/views/project.hbs
+++ b/days18/views/project.hbs
@@ -14,6 +14,7 @@
   <!-- style css modified -->
 
   <!-- <link rel="stylesheet" href="assets/css/card.css"> -->
+  <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 </head>
 
 <body>
@@ -60,8 +61,30 @@
   <!-- end navbar -->
 
   <!-- card Project -->
+  {{#if messages.danger}}
+  <script>
 
-      {{#if user}}
+    Swal.fire({
+      title: "Are you sure?",
+      text: "You won't be able to revert this!",
+      icon: "warning",
+      showCancelButton: true,
+      confirmButtonColor: "#3085d6",
+      cancelButtonColor: "#d33",
+      confirmButtonText: "Yes, delete it!"
+    }).then((result) => {
+      if (result.isConfirmed) {
+        Swal.fire({
+          title: "Deleted!",
+          text: "Your file has been deleted.",
+          icon: "success"
+        });
+      }
+    });
+  </script>
+  {{/if}}
+
+  {{#if user}}
   <section id="container" class="py-5 bg-black text-white">
 
     <div class="container auto-">
@@ -76,7 +99,8 @@
         <div class="row g-0 p-3">
           <div class="col-md-4 ">
             <a href="/details/{{id}}">
-              <img src="{{image}}" class="img-fluid rounded-start shadow-sm p-3 mb-5 bg-body-tertiary rounded" alt="...">
+              <img src="{{image}}" class="img-fluid rounded-start shadow-sm p-3 mb-5 bg-body-tertiary rounded"
+                alt="...">
             </a>
           </div>
           <div class="col-md-8">
@@ -85,23 +109,27 @@
               <p class="card-text">{{content}}</p>
               <div class="justify-content-md-end">
                 <small class="text-body-secondary ">
-                  <h4>Time Post:</h4> {{sDate}} 
+                  <h4>Time Post:</h4> {{sDate}}
                 </small>
               </div>
             </div>
 
             <div class="row row-cols-auto m-4 ">
-              {{#if checkBox1}} <div class="col shadow p-2 mb-4  rounded bg-black " style="margin-right: 7px;"> <i class="fa-brands fa-java fa-2x"></i></div>{{/if}}
-              {{#if checkBox2}} <div class="col shadow p-2 mb-4  rounded bg-black" style="margin-right: 7px;"><i class="fa-brands fa-js fa-2x"></i></div>{{/if}}
-              {{#if checkBox3}}<div class="col shadow p-2 mb-4  rounded bg-black" style="margin-right: 7px;"><i class="fa-brands fa-python fa-2x"></i></div>{{/if}}
-              {{#if checkBox4}}<div class="col shadow p-2 mb-4  rounded bg-black" style="margin-right: 7px;"><i class="fa-brands fa-golang fa-2x"></i></div>{{/if}}
+              {{#if checkBox1}} <div class="col shadow p-2 mb-4  rounded bg-black " style="margin-right: 7px;"> <i
+                  class="fa-brands fa-java fa-2x"></i></div>{{/if}}
+              {{#if checkBox2}} <div class="col shadow p-2 mb-4  rounded bg-black" style="margin-right: 7px;"><i
+                  class="fa-brands fa-js fa-2x"></i></div>{{/if}}
+              {{#if checkBox3}}<div class="col shadow p-2 mb-4  rounded bg-black" style="margin-right: 7px;"><i
+                  class="fa-brands fa-python fa-2x"></i></div>{{/if}}
+              {{#if checkBox4}}<div class="col shadow p-2 mb-4  rounded bg-black" style="margin-right: 7px;"><i
+                  class="fa-brands fa-golang fa-2x"></i></div>{{/if}}
             </div>
-        </div>
-              <div class="d-md-flex justify-content-md-end">
-                <b class="shadow p-1 mb-1 bg-body-tertiary rounded">{{name}}</b>
-              </div>
           </div>
-        {{#if id}}
+          <div class="d-md-flex justify-content-md-end">
+            <b class="shadow p-1 mb-1 bg-body-tertiary rounded">{{name}}</b>
+          </div>
+        </div>
+        {{#if userId}}
         <div class="container text-center">
           <div class="d-grid gap-2 d-md-flex justify-content-md-end">
             <a href="/edit-project/{{id}}" class="btn btn-dark me-md-2">Edit</a>
@@ -111,7 +139,7 @@
         {{/if}}
       </div>
       {{/each}}
-    {{/if}}
+      {{/if}}
   </section>
   <!-- card Project End -->
   <script src="assets/js/project.js"></script>
