--- a/days18/views/testimonial.hbs
+++ b/days18/views/testimonial.hbs
@@ -80,9 +80,12 @@
         <i class="fa fa-star" aria-hidden="true" onclick="StarRating(5)">5</i>
       </button>
     </div>
-    <div class="container-cards" id="container-card">
 
+    {{!-- card --}}
+    <div class="container-cards" id="container-card" style="text-align: center;">
     </div>
+     {{!-- End card --}}
+     
   </section>
   <!-- End Testimonial -->
 
