--- a/days18/views/details.hbs
+++ b/days18/views/details.hbs
@@ -45,7 +45,7 @@
   <!-- end navbar -->
   <!-- blog event detail -->
 
-  <section style="background-color: rgb(0, 0, 0); color:white">
+  <section style="background-color: rgb(0, 0, 0); color:white; width:100%; height:850px; padding-top:20px;">
     <div class="container pt-5 " style="background-color: rgb(20, 24, 32) ;">
       <h3>{{blog.title}}</h3>
       <div class="row">
@@ -58,11 +58,6 @@
           <br>
           <span><i class="fa-solid fa-clock fa-1x"></i> {{blog.duration}}</span>
           <br>
-          {{#if user.id}}
-          <span>
-            <h6>Autor:</h6>{{user.name}}
-          </span>
-          {{/if}}
           <br>
           <h3>Technology</h3>
           <div class="row">
@@ -74,6 +69,12 @@
             </div>
             <article class="shadow p-1 mb-1 bg-body-tertiary rounded">{{blog.content}}</article>
           </div>
+          
+          {{#if blog }}
+          <span>
+            <i>Autor:  __{{user.name}}</i>
+          </span>
+          {{/if}}
   </section>
 
 
