--- a/days18/views/index.hbs
+++ b/days18/views/index.hbs
@@ -11,12 +11,13 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
   <!-- style css modified -->
+  <link rel="stylesheet" href="../assets/css/button.css">
   <!-- <link rel="stylesheet" href="assets/css/card.css"> -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css">
-   <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+  <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 </head>
 
-<body>
+<body style="background-color: rgb(5, 8, 18);">
   <!-- navbar bootstrap-->
 
   <nav class="navbar navbar-expand-lg bg-success text-white">
@@ -49,18 +50,17 @@
   <!-- end navbar -->
 
   <!-- card blog -->
-
   <section class="text-white" style="max-width:100%; background-color:rgb(20, 24, 32) ">
-       {{#if messages.valid}}
-   <script>
-    Swal.fire({
-  position: "top-start",
-  icon: "success",
-  title: "{{messages.valid.[0]}}",
-  showConfirmButton: false,
-  timer: 1500
-});
-   </script>
+    {{#if messages.valid}}
+    <script>
+      Swal.fire({
+        position: "top-start",
+        icon: "success",
+        title: "{{messages.valid.[0]}}",
+        showConfirmButton: false,
+        timer: 1500
+      });
+    </script>
     {{/if}}
     <div class="container text-center p-2 contain-card">
       <div class="row">
@@ -75,7 +75,7 @@
             aria-label="Basic example">
             <button type="button" class="btn  btn-dark mx-md-5">
               <a href="https://wa.me/62895360103563?text=apakah kamu ingin menghubungi saya?jika iya,maka silahkan lanjut ke whatsapp saya"
-                class="text-white">contact</a>
+                class="text-white text-decoration-none">contact </a>
             </button>
             <button type="button" class="btn btn- mx-md-5">
               <a href="image/cv.png" class="btn btn-primary" id="download">download CV <svg
@@ -88,46 +88,42 @@
                 </svg></a>
             </button>
           </div>
-          <div class="btn-group pt-5 " role="group" aria-label="Basic example">
-            <div class="btn-group" role="group" aria-label="First group">
-              <button type="button" class="btn btn-light m-md-2">
-                <a href="https://www.linkedin.com/" target="_blank"><svg style="width: 30px;"
-                    xmlns="http://www.w3.org/2000/svg"
-                    viewBox="0 0 448 512"><!--!Font Awesome Free 6.6.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.-->
-                    <path
-                      d="M416 32H31.9C14.3 32 0 46.5 0 64.3v383.4C0 465.5 14.3 480 31.9 480H416c17.6 0 32-14.5 32-32.3V64.3c0-17.8-14.4-32.3-32-32.3zM135.4 416H69V202.2h66.5V416zm-33.2-243c-21.3 0-38.5-17.3-38.5-38.5S80.9 96 102.2 96c21.2 0 38.5 17.3 38.5 38.5 0 21.3-17.2 38.5-38.5 38.5zm282.1 243h-66.4V312c0-24.8-.5-56.7-34.5-56.7-34.6 0-39.9 27-39.9 54.9V416h-66.4V202.2h63.7v29.2h.9c8.9-16.8 30.6-34.5 62.9-34.5 67.2 0 79.7 44.3 79.7 101.9V416z" />
-                  </svg></a>
-              </button>
-
-              <button type="button" class="btn btn-light m-md-2">
-                <a href="https://github.com/Adik-soleh" target="_blank"><svg style="width: 30px;"
-                    xmlns="http://www.w3.org/2000/svg"
-                    viewBox="0 0 448 512"><!--!Font Awesome Free 6.6.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.-->
-                    <path
-                      d="M448 96c0-35.3-28.7-64-64-64H64C28.7 32 0 60.7 0 96V416c0 35.3 28.7 64 64 64H384c35.3 0 64-28.7 64-64V96zM265.8 407.7c0-1.8 0-6 .1-11.6c.1-11.4 .1-28.8 .1-43.7c0-15.6-5.2-25.5-11.3-30.7c37-4.1 76-9.2 76-73.1c0-18.2-6.5-27.3-17.1-39c1.7-4.3 7.4-22-1.7-45c-13.9-4.3-45.7 17.9-45.7 17.9c-13.2-3.7-27.5-5.6-41.6-5.6s-28.4 1.9-41.6 5.6c0 0-31.8-22.2-45.7-17.9c-9.1 22.9-3.5 40.6-1.7 45c-10.6 11.7-15.6 20.8-15.6 39c0 63.6 37.3 69 74.3 73.1c-4.8 4.3-9.1 11.7-10.6 22.3c-9.5 4.3-33.8 11.7-48.3-13.9c-9.1-15.8-25.5-17.1-25.5-17.1c-16.2-.2-1.1 10.2-1.1 10.2c10.8 5 18.4 24.2 18.4 24.2c9.7 29.7 56.1 19.7 56.1 19.7c0 9 .1 21.7 .1 30.6c0 4.8 .1 8.6 .1 10c0 4.3-3 9.5-11.5 8C106 393.6 59.8 330.8 59.8 257.4c0-91.8 70.2-161.5 162-161.5s166.2 69.7 166.2 161.5c.1 73.4-44.7 136.3-110.7 158.3c-8.4 1.5-11.5-3.7-11.5-8zm-90.5-54.8c-.2-1.5 1.1-2.8 3-3.2c1.9-.2 3.7 .6 3.9 1.9c.3 1.3-1 2.6-3 3c-1.9 .4-3.7-.4-3.9-1.7zm-9.1 3.2c-2.2 .2-3.7-.9-3.7-2.4c0-1.3 1.5-2.4 3.5-2.4c1.9-.2 3.7 .9 3.7 2.4c0 1.3-1.5 2.4-3.5 2.4zm-14.3-2.2c-1.9-.4-3.2-1.9-2.8-3.2s2.4-1.9 4.1-1.5c2 .6 3.3 2.1 2.8 3.4c-.4 1.3-2.4 1.9-4.1 1.3zm-12.5-7.3c-1.5-1.3-1.9-3.2-.9-4.1c.9-1.1 2.8-.9 4.3 .6c1.3 1.3 1.8 3.3 .9 4.1c-.9 1.1-2.8 .9-4.3-.6zm-8.5-10c-1.1-1.5-1.1-3.2 0-3.9c1.1-.9 2.8-.2 3.7 1.3c1.1 1.5 1.1 3.3 0 4.1c-.9 .6-2.6 0-3.7-1.5zm-6.3-8.8c-1.1-1.3-1.3-2.8-.4-3.5c.9-.9 2.4-.4 3.5 .6c1.1 1.3 1.3 2.8 .4 3.5c-.9 .9-2.4 .4-3.5-.6zm-6-6.4c-1.3-.6-1.9-1.7-1.5-2.6c.4-.6 1.5-.9 2.8-.4c1.3 .7 1.9 1.8 1.5 2.6c-.4 .9-1.7 1.1-2.8 .4z" />
-                  </svg></a>
-              </button>
-
-              <button type="button" class="btn btn-light m-md-2">
-                <a href="https://www.instagram.com/adk.soleh?igsh=dGVpMzg0NnJmdGgz" target="_blank"><svg
-                    style="width: 30px;" xmlns="http://www.w3.org/2000/svg"
-                    viewBox="0 0 448 512"><!--!Font Awesome Free 6.6.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.-->
-                    <path
-                      d="M194.4 211.7a53.3 53.3 0 1 0 59.3 88.7 53.3 53.3 0 1 0 -59.3-88.7zm142.3-68.4c-5.2-5.2-11.5-9.3-18.4-12c-18.1-7.1-57.6-6.8-83.1-6.5c-4.1 0-7.9 .1-11.2 .1c-3.3 0-7.2 0-11.4-.1c-25.5-.3-64.8-.7-82.9 6.5c-6.9 2.7-13.1 6.8-18.4 12s-9.3 11.5-12 18.4c-7.1 18.1-6.7 57.7-6.5 83.2c0 4.1 .1 7.9 .1 11.1s0 7-.1 11.1c-.2 25.5-.6 65.1 6.5 83.2c2.7 6.9 6.8 13.1 12 18.4s11.5 9.3 18.4 12c18.1 7.1 57.6 6.8 83.1 6.5c4.1 0 7.9-.1 11.2-.1c3.3 0 7.2 0 11.4 .1c25.5 .3 64.8 .7 82.9-6.5c6.9-2.7 13.1-6.8 18.4-12s9.3-11.5 12-18.4c7.2-18 6.8-57.4 6.5-83c0-4.2-.1-8.1-.1-11.4s0-7.1 .1-11.4c.3-25.5 .7-64.9-6.5-83l0 0c-2.7-6.9-6.8-13.1-12-18.4zm-67.1 44.5A82 82 0 1 1 178.4 324.2a82 82 0 1 1 91.1-136.4zm29.2-1.3c-3.1-2.1-5.6-5.1-7.1-8.6s-1.8-7.3-1.1-11.1s2.6-7.1 5.2-9.8s6.1-4.5 9.8-5.2s7.6-.4 11.1 1.1s6.5 3.9 8.6 7s3.2 6.8 3.2 10.6c0 2.5-.5 5-1.4 7.3s-2.4 4.4-4.1 6.2s-3.9 3.2-6.2 4.2s-4.8 1.5-7.3 1.5l0 0c-3.8 0-7.5-1.1-10.6-3.2zM448 96c0-35.3-28.7-64-64-64H64C28.7 32 0 60.7 0 96V416c0 35.3 28.7 64 64 64H384c35.3 0 64-28.7 64-64V96zM357 389c-18.7 18.7-41.4 24.6-67 25.9c-26.4 1.5-105.6 1.5-132 0c-25.6-1.3-48.3-7.2-67-25.9s-24.6-41.4-25.8-67c-1.5-26.4-1.5-105.6 0-132c1.3-25.6 7.1-48.3 25.8-67s41.5-24.6 67-25.8c26.4-1.5 105.6-1.5 132 0c25.6 1.3 48.3 7.1 67 25.8s24.6 41.4 25.8 67c1.5 26.3 1.5 105.4 0 131.9c-1.3 25.6-7.1 48.3-25.8 67z" />
-                  </svg></a>
-              </button>
-
-              <button type="button" class="btn btn-light m-md-2">
-                <a href="https://www.twitter.com/" target="_blank"><svg style="width: 30px;"
-                    xmlns="http://www.w3.org/2000/svg"
-                    viewBox="0 0 448 512"><!--!Font Awesome Free 6.6.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.-->
-                    <path
-                      d="M64 32C28.7 32 0 60.7 0 96V416c0 35.3 28.7 64 64 64H384c35.3 0 64-28.7 64-64V96c0-35.3-28.7-64-64-64H64zM351.3 199.3v0c0 86.7-66 186.6-186.6 186.6c-37.2 0-71.7-10.8-100.7-29.4c5.3 .6 10.4 .8 15.8 .8c30.7 0 58.9-10.4 81.4-28c-28.8-.6-53-19.5-61.3-45.5c10.1 1.5 19.2 1.5 29.6-1.2c-30-6.1-52.5-32.5-52.5-64.4v-.8c8.7 4.9 18.9 7.9 29.6 8.3c-9-6-16.4-14.1-21.5-23.6s-7.8-20.2-7.7-31c0-12.2 3.2-23.4 8.9-33.1c32.3 39.8 80.8 65.8 135.2 68.6c-9.3-44.5 24-80.6 64-80.6c18.9 0 35.9 7.9 47.9 20.7c14.8-2.8 29-8.3 41.6-15.8c-4.9 15.2-15.2 28-28.8 36.1c13.2-1.4 26-5.1 37.8-10.2c-8.9 13.1-20.1 24.7-32.9 34c.2 2.8 .2 5.7 .2 8.5z" />
-                  </svg></a>
-              </button>
-            </div>
           </div>
-        </div>
+           <div class="redes">
+                <a href="https://www.instagram.com/adk.soleh?igsh=dGVpMzg0NnJmdGgz" class="instagram"><svg
+                    class="instagram" fill-rule="nonzero" height="25px" width="25px" viewBox="0,0,256,256"
+                    xmlns:xlink="http://www.w3.org/1999/xlink" xmlns="http://www.w3.org/2000/svg">
+                    <g style="mix-blend-mode: normal" text-anchor="none" font-size="none" font-weight="none"
+                      font-family="none" stroke-dashoffset="0" stroke-dasharray="" stroke-miterlimit="10"
+                      stroke-linejoin="miter" stroke-linecap="butt" stroke-width="1" stroke="none" fill-rule="nonzero">
+                      <g transform="scale(8,8)">
+                        <path
+                          d="M11.46875,5c-3.55078,0 -6.46875,2.91406 -6.46875,6.46875v9.0625c0,3.55078 2.91406,6.46875 6.46875,6.46875h9.0625c3.55078,0 6.46875,-2.91406 6.46875,-6.46875v-9.0625c0,-3.55078 -2.91406,-6.46875 -6.46875,-6.46875zM11.46875,7h9.0625c2.47266,0 4.46875,1.99609 4.46875,4.46875v9.0625c0,2.47266 -1.99609,4.46875 -4.46875,4.46875h-9.0625c-2.47266,0 -4.46875,-1.99609 -4.46875,-4.46875v-9.0625c0,-2.47266 1.99609,-4.46875 4.46875,-4.46875zM21.90625,9.1875c-0.50391,0 -0.90625,0.40234 -0.90625,0.90625c0,0.50391 0.40234,0.90625 0.90625,0.90625c0.50391,0 0.90625,-0.40234 0.90625,-0.90625c0,-0.50391 -0.40234,-0.90625 -0.90625,-0.90625zM16,10c-3.30078,0 -6,2.69922 -6,6c0,3.30078 2.69922,6 6,6c3.30078,0 6,-2.69922 6,-6c0,-3.30078 -2.69922,-6 -6,-6zM16,12c2.22266,0 4,1.77734 4,4c0,2.22266 -1.77734,4 -4,4c-2.22266,0 -4,-1.77734 -4,-4c0,-2.22266 1.77734,-4 4,-4z">
+                        </path>
+                      </g>
+                    </g>
+                  </svg>
+                </a>
+                <a href="https://www.twitter.com/" class="twitter"> <svg class="twitter" height="25px" width="25px"
+                    viewBox="0 0 48 48" xmlns="http://www.w3.org/2000/svg">
+                    <path
+                      d="M42,12.429c-1.323,0.586-2.746,0.977-4.247,1.162c1.526-0.906,2.7-2.351,3.251-4.058c-1.428,0.837-3.01,1.452-4.693,1.776C34.967,9.884,33.05,9,30.926,9c-4.08,0-7.387,3.278-7.387,7.32c0,0.572,0.067,1.129,0.193,1.67c-6.138-0.308-11.582-3.226-15.224-7.654c-0.64,1.082-1,2.349-1,3.686c0,2.541,1.301,4.778,3.285,6.096c-1.211-0.037-2.351-0.374-3.349-0.914c0,0.022,0,0.055,0,0.086c0,3.551,2.547,6.508,5.923,7.181c-0.617,0.169-1.269,0.263-1.941,0.263c-0.477,0-0.942-0.054-1.392-0.135c0.94,2.902,3.667,5.023,6.898,5.086c-2.528,1.96-5.712,3.134-9.174,3.134c-0.598,0-1.183-0.034-1.761-0.104C9.268,36.786,13.152,38,17.321,38c13.585,0,21.017-11.156,21.017-20.834c0-0.317-0.01-0.633-0.025-0.945C39.763,15.197,41.013,13.905,42,12.429">
+                    </path>
+                  </svg></a>
+                <a href="https://github.com/Adik-soleh" class="github"> <svg class="github" height="25px" width="25px"
+                    viewBox="0 0 30 30" xmlns="http://www.w3.org/2000/svg">
+                    <path
+                      d="M15,3C8.373,3,3,8.373,3,15c0,5.623,3.872,10.328,9.092,11.63C12.036,26.468,12,26.28,12,26.047v-2.051 c-0.487,0-1.303,0-1.508,0c-0.821,0-1.551-0.353-1.905-1.009c-0.393-0.729-0.461-1.844-1.435-2.526 c-0.289-0.227-0.069-0.486,0.264-0.451c0.615,0.174,1.125,0.596,1.605,1.222c0.478,0.627,0.703,0.769,1.596,0.769 c0.433,0,1.081-0.025,1.691-0.121c0.328-0.833,0.895-1.6,1.588-1.962c-3.996-0.411-5.903-2.399-5.903-5.098 c0-1.162,0.495-2.286,1.336-3.233C9.053,10.647,8.706,8.73,9.435,8c1.798,0,2.885,1.166,3.146,1.481C13.477,9.174,14.461,9,15.495,9 c1.036,0,2.024,0.174,2.922,0.483C18.675,9.17,19.763,8,21.565,8c0.732,0.731,0.381,2.656,0.102,3.594 c0.836,0.945,1.328,2.066,1.328,3.226c0,2.697-1.904,4.684-5.894,5.097C18.199,20.49,19,22.1,19,23.313v2.734 c0,0.104-0.023,0.179-0.035,0.268C23.641,24.676,27,20.236,27,15C27,8.373,21.627,3,15,3z">
+                    </path>
+                  </svg></a>
+                <a href="#" class="linkedein"><svg class="discord" xmlns="http://www.w3.org/2000/svg"
+                    viewBox="0 0 448 512" width="25px" height="25px">
+                    <path
+                      d="M100.3 448H7.4V148.9h92.9zM53.8 108.1C24.1 108.1 0 83.5 0 53.8a53.8 53.8 0 0 1 107.6 0c0 29.7-24.1 54.3-53.8 54.3zM447.9 448h-92.7V302.4c0-34.7-.7-79.2-48.3-79.2-48.3 0-55.7 37.7-55.7 76.7V448h-92.8V148.9h89.1v40.8h1.3c12.4-23.5 42.7-48.3 87.9-48.3 94 0 111.3 61.9 111.3 142.3V448z">
+                    </path>
+                  </svg>
+                </a>
+              </div>
         <div class="col pt-5 card-blog">
           <div class="card">
             <img
@@ -145,87 +141,39 @@
   <br><br><br>
   <hr>
 
-  <section>
-    <h1 class="text-center">MY PROJECT</h1>
+  {{!-- start card --}}
+  <h1 class="text-center text-white">MY PROJECT</h1>
+  <div class="container mt-4">
     <div class="container container-cards">
-      <div class="row  align-self-center" id="container-card">
-        <div class="col">
-          <div class="card" style="width: 100%;">
-            <a href="details.html"><img src="https://www.nopio.com/wp-content/uploads/2016/05/web-development.jpg"
-                class="card-img-top" alt="..."></a>
+      <div class="row">
+        {{#each blog}}
+        <div class="col-md-4 mb-3">
+          <div class="card">
+            <img src="{{image}}" alt="...">
             <div class="card-body">
-              <h5 class="card-title">{{blogs.title}}</h5>
-              <h6 class="card-subtitle">Durasi :</h6>
-              <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus fugit
-                pariatur illum error eveniet reiciendis mollitia in ab, quo accusamus?</p>
-              <div class="container text-center">
-                <div class="row row-cols-auto">
-                  <div class="col"><i class="fa-brands fa-js"></i></div>
-                  <div class="col"><i class="fa-brands fa-python"></i></div>
-                  <div class="col"><i class="fa-brands fa-java"></i></div>
-                  <div class="col"><i class="fa-brands fa-golang"></i></div>
-                </div>
+              <h5 class="card-title text-black">{{title}}</h5>
+              <p class="card-text text-black">{{content}}</p>
+              <div class="row row-cols-auto">
+                {{#if checkBox1}} <div class="col shadow p-2 mb-4  rounded bg-white " style="margin-right: 7px;"> <i
+                    class="fa-brands fa-java fa-2x"></i></div>{{/if}}
+                {{#if checkBox2}} <div class="col shadow p-2 mb-4  rounded bg-white" style="margin-right: 7px;"><i
+                    class="fa-brands fa-js fa-2x"></i></div>{{/if}}
+                {{#if checkBox3}}<div class="col shadow p-2 mb-4  rounded bg-white" style="margin-right: 7px;"><i
+                    class="fa-brands fa-python fa-2x"></i></div>{{/if}}
+                {{#if checkBox4}}<div class="col shadow p-2 mb-4  rounded bg-white" style="margin-right: 7px;"><i
+                    class="fa-brands fa-golang fa-2x"></i></div>{{/if}}
               </div>
-              <div class="d-flex justify-content-between update">
-                <a href="#" class="btn btn-dark">Update</a>
-                <a href="#" class="btn btn-danger">Delete</a>
-              </div>
+            </div>
+            <div class="d-flex justify-content-between update">
+              <a href="#" class="btn btn-dark">Update</a>
+              <a href="#" class="btn btn-danger">Delete</a>
             </div>
           </div>
         </div>
-        <div class="col ">
-          <div class="card" style="width: 100%;">
-            <a href="details.html"><img
-                src="https://www.herzing.edu/sites/default/files/2020-09/it_computer_programming.jpg"
-                class="card-img-top" alt="..."></a>
-            <div class="card-body">
-              <h5 class="card-title">Project Title</h5>
-              <h6 class="card-subtitle">Durasi :</h6>
-              <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus fugit
-                pariatur illum error eveniet reiciendis mollitia in ab, quo accusamus?</p>
-              <div class="container text-center">
-                <div class="row row-cols-auto">
-                  <div class="col"><i class="fa-brands fa-js"></i></div>
-                  <div class="col"><i class="fa-brands fa-python"></i></div>
-                  <div class="col"><i class="fa-brands fa-java"></i></div>
-                  <div class="col"><i class="fa-brands fa-golang"></i></div>
-                </div>
-              </div>
-              <div class="d-flex justify-content-between update">
-                <a href="#" class="btn btn-dark">Update</a>
-                <a href="#" class="btn btn-danger">Delete</a>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="col">
-          <div class="card" style="width: 100%;">
-            <a href="details.html"><img
-                src="https://www.becomeopedia.com/wp-content/uploads/software-developer-6521720_960_720.jpg"
-                class="card-img-top" alt="..."></a>
-            <div class="card-body">
-              <h5 class="card-title">Project Title</h5>
-              <h6 class="card-subtitle">Durasi :</h6>
-              <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus fugit
-                pariatur illum error eveniet reiciendis mollitia in ab, quo accusamus?</p>
-              <div class="container text-center">
-                <div class="row row-cols-auto">
-                  <div class="col"><i class="fa-brands fa-js"></i></div>
-                  <div class="col"><i class="fa-brands fa-python"></i></div>
-                  <div class="col"><i class="fa-brands fa-java"></i></div>
-                  <div class="col"><i class="fa-brands fa-golang"></i></div>
-                </div>
-              </div>
-              <div class="d-flex justify-content-between update">
-                <a href="#" class="btn btn-dark">Update</a>
-                <a href="#" class="btn btn-danger">Delete</a>
-              </div>
-            </div>
-          </div>
-        </div>
+        {{/each}}
       </div>
     </div>
-  </section>
+  </div>
   <!-- end card blog -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
