--- a/days18/views/login.hbs
+++ b/days18/views/login.hbs
@@ -47,9 +47,27 @@
     </div>
   </nav>
   <!-- end navbar -->
-
+{{#if messages.valid}}
+   <script>
+const Toast = Swal.mixin({
+  toast: true,
+  position: "top-end",
+  showConfirmButton: false,
+  timer: 3000,
+  timerProgressBar: true,
+  didOpen: (toast) => {
+    toast.onmouseenter = Swal.stopTimer;
+    toast.onmouseleave = Swal.resumeTimer;
+  }
+});
+Toast.fire({
+  icon: "success",
+  title: "Signed in successfully"
+});
+   </script>
+    {{/if}}
   <!-- start form -->
-  <div class="container rounded shadow mt-5 text-white" style="width: 500px; background-color:rgb(20, 24, 32) ;">
+   <div class="con" style="width: 60px;">
    {{#if messages.danger}}
    <script>
     Swal.fire({
@@ -60,6 +78,8 @@
 });
    </script>
     {{/if}}
+   </div>
+  <div class="container rounded shadow mt-5 text-white" style="width: 500px; background-color:rgb(20, 24, 32) ;">
     <form action="/login" method="post" class="p-3">
       <H1 class="text-center fs-2 pb-5">LOGIN TO YOUR ACCOUNT</H1>
       <div class="mb-3">
