--- a/days18/views/project.hbs
+++ b/days18/views/project.hbs
@@ -61,29 +61,28 @@
   <!-- end navbar -->
 
   <!-- card Project -->
-  {{#if messages.danger}}
+ {{#if messages.danger}}
   <script>
-
+Swal.fire({
+  title: "Are you sure?",
+  text: "You won't be able to revert this!",
+  icon: "warning",
+  showCancelButton: true,
+  confirmButtonColor: "#3085d6",
+  cancelButtonColor: "#d33",
+  confirmButtonText: "Yes, delete it!"
+}).then((result) => {
+  if (result.isConfirmed) {
     Swal.fire({
-      title: "Are you sure?",
-      text: "You won't be able to revert this!",
-      icon: "warning",
-      showCancelButton: true,
-      confirmButtonColor: "#3085d6",
-      cancelButtonColor: "#d33",
-      confirmButtonText: "Yes, delete it!"
-    }).then((result) => {
-      if (result.isConfirmed) {
-        Swal.fire({
-          title: "Deleted!",
-          text: "Your file has been deleted.",
-          icon: "success"
-        });
-      }
+      title: "Deleted!",
+      text: "Your file has been deleted.",
+      icon: "success"
     });
+  }
+});
+
   </script>
   {{/if}}
-
   {{#if user}}
   <section id="container" class="py-5 bg-black text-white">
 
@@ -95,7 +94,7 @@
       {{/if}}
 
       {{#each blog }}
-      <div class="card mb-3 d-grid gap-2 d-md-flex " style="max-width:90%; background-color:rgb(20, 24, 32) ">
+      <div class="card mb-3 d-grid gap-2 d-md-flex " style="max-width:100%; background-color:rgb(20, 24, 32) ">
         <div class="row g-0 p-3">
           <div class="col-md-4 ">
             <a href="/details/{{id}}">
@@ -126,7 +125,7 @@
             </div>
           </div>
           <div class="d-md-flex justify-content-md-end">
-            <b class="shadow p-1 mb-1 bg-body-tertiary rounded">{{name}}</b>
+           <i> <b class="shadow p-1 mb-1 bg-body-tertiary rounded">__{{name}}</b></i>
           </div>
         </div>
         {{#if userId}}
